add dataFetcher so that cal res stream